@@ -1,5 +1,5 @@
 /*
- * Copyright 2022 Crown Copyright
+ * Copyright 2022-2024 Crown Copyright
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,66 +15,62 @@
  */
 package sleeper.cdk.stack;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
-import sleeper.cdk.Utils;
-import sleeper.configuration.properties.InstanceProperties;
-import software.constructs.Construct;
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import software.amazon.awscdk.Duration;
 import software.amazon.awscdk.NestedStack;
 import software.amazon.awscdk.RemovalPolicy;
 import software.amazon.awscdk.services.athena.CfnDataCatalog;
+import software.amazon.awscdk.services.iam.IRole;
 import software.amazon.awscdk.services.iam.Policy;
 import software.amazon.awscdk.services.iam.PolicyStatement;
+import software.amazon.awscdk.services.kms.IKey;
 import software.amazon.awscdk.services.kms.Key;
-import software.amazon.awscdk.services.lambda.Code;
-import software.amazon.awscdk.services.lambda.Function;
-import software.amazon.awscdk.services.lambda.Runtime;
-import software.amazon.awscdk.services.lambda.S3Code;
+import software.amazon.awscdk.services.lambda.IFunction;
 import software.amazon.awscdk.services.s3.BlockPublicAccess;
 import software.amazon.awscdk.services.s3.Bucket;
 import software.amazon.awscdk.services.s3.BucketEncryption;
 import software.amazon.awscdk.services.s3.IBucket;
 import software.amazon.awscdk.services.s3.LifecycleRule;
+import software.constructs.Construct;
+
+import sleeper.cdk.jars.BuiltJars;
+import sleeper.cdk.jars.LambdaCode;
+import sleeper.cdk.stack.core.CoreStacks;
+import sleeper.cdk.stack.core.LoggingStack.LogGroupRef;
+import sleeper.cdk.util.AutoDeleteS3Objects;
+import sleeper.cdk.util.Utils;
+import sleeper.core.deploy.LambdaHandler;
+import sleeper.core.properties.instance.InstanceProperties;
 
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 
-import static sleeper.configuration.properties.SystemDefinedInstanceProperty.CONFIG_BUCKET;
-import static sleeper.configuration.properties.UserDefinedInstanceProperty.ACCOUNT;
-import static sleeper.configuration.properties.UserDefinedInstanceProperty.ATHENA_COMPOSITE_HANDLER_CLASSES;
-import static sleeper.configuration.properties.UserDefinedInstanceProperty.ATHENA_COMPOSITE_HANDLER_MEMORY;
-import static sleeper.configuration.properties.UserDefinedInstanceProperty.ATHENA_COMPOSITE_HANDLER_TIMEOUT_IN_SECONDS;
-import static sleeper.configuration.properties.UserDefinedInstanceProperty.ID;
-import static sleeper.configuration.properties.UserDefinedInstanceProperty.JARS_BUCKET;
-import static sleeper.configuration.properties.UserDefinedInstanceProperty.LOG_RETENTION_IN_DAYS;
-import static sleeper.configuration.properties.UserDefinedInstanceProperty.REGION;
-import static sleeper.configuration.properties.UserDefinedInstanceProperty.SPILL_BUCKET_AGE_OFF_IN_DAYS;
-import static sleeper.configuration.properties.UserDefinedInstanceProperty.VERSION;
-import static sleeper.configuration.properties.UserDefinedInstanceProperty.USER_JARS;;
+import static sleeper.core.properties.instance.AthenaProperty.ATHENA_COMPOSITE_HANDLER_CLASSES;
+import static sleeper.core.properties.instance.AthenaProperty.ATHENA_COMPOSITE_HANDLER_MEMORY;
+import static sleeper.core.properties.instance.AthenaProperty.ATHENA_COMPOSITE_HANDLER_TIMEOUT_IN_SECONDS;
+import static sleeper.core.properties.instance.AthenaProperty.ATHENA_SPILL_MASTER_KEY_ARN;
+import static sleeper.core.properties.instance.AthenaProperty.SPILL_BUCKET_AGE_OFF_IN_DAYS;
+import static sleeper.core.properties.instance.CommonProperty.ACCOUNT;
+import static sleeper.core.properties.instance.CommonProperty.REGION;
 
+@SuppressFBWarnings("NP_NULL_ON_SOME_PATH_FROM_RETURN_VALUE")
 public class AthenaStack extends NestedStack {
-    public AthenaStack(Construct scope, String id, InstanceProperties instanceProperties,
-                       List<StateStoreStack> stateStoreStacks, List<IBucket> dataBuckets) {
+
+    public AthenaStack(
+            Construct scope, String id, InstanceProperties instanceProperties, BuiltJars jars, CoreStacks coreStacks) {
         super(scope, id);
 
-        String jarsBucketName = instanceProperties.get(JARS_BUCKET);
-        String version = instanceProperties.get(VERSION);
-        String instanceId = instanceProperties.get(ID);
-        int logRetentionDays = instanceProperties.getInt(LOG_RETENTION_IN_DAYS);
-        List<String> userJars = instanceProperties.getList(USER_JARS);
-        IBucket jarsBucket = Bucket.fromBucketName(this, "JarsBucket", jarsBucketName);
-        S3Code s3Code = Code.fromBucket(jarsBucket, "athena-" + version + ".jar");
-        
-        IBucket configBucket = Bucket.fromBucketName(this, "ConfigBucket", instanceProperties.get(CONFIG_BUCKET));
+        IBucket jarsBucket = Bucket.fromBucketName(this, "JarsBucket", jars.bucketName());
+        LambdaCode lambdaCode = jars.lambdaCode(jarsBucket);
 
-        String bucketName = Utils.truncateTo64Characters(String.join("-", "sleeper",
-                instanceProperties.get(ID).toLowerCase(), "spill-bucket"));
+        String bucketName = String.join("-", "sleeper",
+                Utils.cleanInstanceId(instanceProperties), "spill-bucket");
 
         Bucket spillBucket = Bucket.Builder.create(this, "SpillBucket")
                 .bucketName(bucketName)
                 .blockPublicAccess(BlockPublicAccess.BLOCK_ALL)
-                .autoDeleteObjects(true)
                 .encryption(BucketEncryption.S3_MANAGED)
                 .lifecycleRules(Lists.newArrayList(LifecycleRule.builder()
                         .expiration(Duration.days(instanceProperties.getInt(SPILL_BUCKET_AGE_OFF_IN_DAYS)))
@@ -82,101 +78,107 @@ public class AthenaStack extends NestedStack {
                 .removalPolicy(RemovalPolicy.DESTROY)
                 .build();
 
-        Key spillMasterKey = Key.Builder.create(this, "SpillMasterKey")
-                .description("Master key used by Sleeper instance " + instanceId + " to generate data keys. The data" +
-                        " keys created are used to encrypt spilled data to S3 when communicating with Amazon Athena.")
-                .enableKeyRotation(true)
-                .removalPolicy(RemovalPolicy.DESTROY)
-                .pendingWindow(Duration.days(7))
-                .build();
+        AutoDeleteS3Objects.autoDeleteForBucket(this, instanceProperties, lambdaCode, spillBucket, bucketName,
+                coreStacks.getLogGroup(LogGroupRef.SPILL_BUCKET_AUTODELETE), coreStacks.getLogGroup(LogGroupRef.SPILL_BUCKET_AUTODELETE_PROVIDER));
+
+        IKey spillMasterKey = createSpillMasterKey(this, instanceProperties);
+        List<Policy> connectorPolicies = createConnectorPolicies(this, instanceProperties);
+
+        createConnector("sleeper.athena.composite.SimpleCompositeHandler",
+                LambdaHandler.ATHENA_SIMPLE_COMPOSITE, LogGroupRef.SIMPLE_ATHENA_HANDLER,
+                instanceProperties, coreStacks, lambdaCode, jarsBucket, spillBucket, spillMasterKey, connectorPolicies);
+        createConnector("sleeper.athena.composite.IteratorApplyingCompositeHandler",
+                LambdaHandler.ATHENA_ITERATORS_COMPOSITE, LogGroupRef.ITERATOR_APPLYING_ATHENA_HANDLER,
+                instanceProperties, coreStacks, lambdaCode, jarsBucket, spillBucket, spillMasterKey, connectorPolicies);
+
+        Utils.addStackTagIfSet(this, instanceProperties);
+    }
+
+    private void createConnector(
+            String className, LambdaHandler handler, LogGroupRef logGroupRef, InstanceProperties instanceProperties, CoreStacks coreStacks,
+            LambdaCode lambdaCode, IBucket jarsBucket, IBucket spillBucket, IKey spillMasterKey, List<Policy> connectorPolicies) {
+        if (!instanceProperties.getList(ATHENA_COMPOSITE_HANDLER_CLASSES).contains(className)) {
+            return;
+        }
+        String instanceId = Utils.cleanInstanceId(instanceProperties);
+        String simpleClassName = getSimpleClassName(className);
+
+        String functionName = String.join("-", "sleeper", instanceId, simpleClassName, "athena-handler");
 
         Map<String, String> env = Utils.createDefaultEnvironment(instanceProperties);
         env.put("spill_bucket", spillBucket.getBucketName());
         env.put("kms_key_id", spillMasterKey.getKeyId());
 
-        Integer memory = instanceProperties.getInt(ATHENA_COMPOSITE_HANDLER_MEMORY);
-        Integer timeout = instanceProperties.getInt(ATHENA_COMPOSITE_HANDLER_TIMEOUT_IN_SECONDS);
-        List<String> handlerClasses = instanceProperties.getList(ATHENA_COMPOSITE_HANDLER_CLASSES);
-
-        Policy listAllBucketsPolicy = Policy.Builder.create(this, "ListAllBucketsPolicy")
-                .statements(Lists.newArrayList(PolicyStatement.Builder.create()
-                        .resources(Lists.newArrayList("*"))
-                        .actions(Lists.newArrayList("S3:ListAllMyBuckets"))
-                        .build()))
-                .build();
-
-        Policy keyGenerationPolicy = Policy.Builder.create(this, "KeyGenerationPolicy")
-                .statements(Lists.newArrayList(PolicyStatement.Builder.create()
-                        .resources(Lists.newArrayList("*"))
-                        .actions(Lists.newArrayList("kms:GenerateRandom"))
-                        .build()))
-                .build();
-
-        Policy getAthenaQueryStatusPolicy = Policy.Builder.create(this, "GetAthenaQueryStatusPolicy")
-                .statements(Lists.newArrayList(PolicyStatement.Builder.create()
-                        .resources(Lists.newArrayList("arn:aws:athena:" + instanceProperties.get(REGION) + ":"
-                                + instanceProperties.get(ACCOUNT) + ":workgroup/*"))
-                        .actions(Lists.newArrayList("athena:getQueryExecution"))
-                        .build()))
-                .build();
-
-        for (String className : handlerClasses) {
-            Function handler = createConnector(className, instanceId, logRetentionDays, s3Code, env, memory, timeout);
-
-            if (userJars != null) {
-                for (String jar : userJars) {
-                    jarsBucket.grantRead(handler, jar);
-                }
-            }
-
-            stateStoreStacks.forEach(sss -> {
-                sss.grantReadActiveFileMetadata(handler);
-                sss.grantReadPartitionMetadata(handler);
-            });
-            dataBuckets.forEach(bucket -> bucket.grantRead(handler));
-            configBucket.grantRead(handler);
-            spillBucket.grantReadWrite(handler);
-            spillMasterKey.grant(handler, "kms:GenerateDataKey", "kms:DescribeKey");
-
-            // Required for when spill bucket changes
-            handler.getRole().attachInlinePolicy(listAllBucketsPolicy);
-
-            // Required for when creating a encryption data key
-            handler.getRole().attachInlinePolicy(keyGenerationPolicy);
-
-            // Allow our function to get the status of the query. Allowed to query all workgroups within this account
-            // and region
-            handler.getRole().attachInlinePolicy(getAthenaQueryStatusPolicy);
-        }
-    }
-
-    private Function createConnector(String className, String instanceId, int logRetentionDays, S3Code s3Code, Map<String, String> env, Integer memory, Integer timeout) {
-        String simpleClassName = className.substring(className.lastIndexOf(".") + 1);
-        if (simpleClassName.endsWith("CompositeHandler")) {
-            simpleClassName = simpleClassName.substring(0, simpleClassName.indexOf("CompositeHandler"));
-        }
-
-        String functionName = Utils.truncateTo64Characters(String.join("-", "sleeper",
-                instanceId.toLowerCase(), simpleClassName, "athena-composite-handler"));
-
-        Function athenaCompositeHandler = Function.Builder.create(this, simpleClassName + "AthenaCompositeHandler")
+        IFunction athenaCompositeHandler = lambdaCode.buildFunction(this, handler, simpleClassName + "AthenaCompositeHandler", builder -> builder
                 .functionName(functionName)
-                .memorySize(memory)
-                .timeout(Duration.seconds(timeout))
-                .code(s3Code)
-                .runtime(Runtime.JAVA_8)
-                .logRetention(Utils.getRetentionDays(logRetentionDays))
-                .handler(className)
-                .environment(env)
-                .build();
+                .memorySize(instanceProperties.getInt(ATHENA_COMPOSITE_HANDLER_MEMORY))
+                .timeout(Duration.seconds(instanceProperties.getInt(ATHENA_COMPOSITE_HANDLER_TIMEOUT_IN_SECONDS)))
+                .logGroup(coreStacks.getLogGroup(logGroupRef))
+                .environment(env));
 
         CfnDataCatalog.Builder.create(this, simpleClassName + "AthenaDataCatalog")
                 .name(instanceId + simpleClassName + "SleeperConnector")
-                .description("Athena Connector for " + instanceId)
+                .description("Athena Connector for Sleeper")
                 .type("LAMBDA")
-                .parameters(ImmutableMap.of("function", athenaCompositeHandler.getFunctionArn()))
+                .parameters(Map.of("function", athenaCompositeHandler.getFunctionArn()))
                 .build();
 
-        return athenaCompositeHandler;
+        jarsBucket.grantRead(athenaCompositeHandler);
+
+        coreStacks.grantReadTablesAndData(athenaCompositeHandler);
+        spillBucket.grantReadWrite(athenaCompositeHandler);
+        spillMasterKey.grant(athenaCompositeHandler, "kms:GenerateDataKey", "kms:DescribeKey");
+
+        IRole role = Objects.requireNonNull(athenaCompositeHandler.getRole());
+        connectorPolicies.forEach(role::attachInlinePolicy);
+    }
+
+    private static List<Policy> createConnectorPolicies(Construct scope, InstanceProperties instanceProperties) {
+        return List.of(
+                // Required when spill bucket changes
+                Policy.Builder.create(scope, "ListAllBucketsPolicy")
+                        .statements(Lists.newArrayList(PolicyStatement.Builder.create()
+                                .resources(Lists.newArrayList("*"))
+                                .actions(Lists.newArrayList("S3:ListAllMyBuckets"))
+                                .build()))
+                        .build(),
+                // Required for creating an encryption data key
+                Policy.Builder.create(scope, "KeyGenerationPolicy")
+                        .statements(Lists.newArrayList(PolicyStatement.Builder.create()
+                                .resources(Lists.newArrayList("*"))
+                                .actions(Lists.newArrayList("kms:GenerateRandom"))
+                                .build()))
+                        .build(),
+                // Allow connectors to get the status of the query. Allowed to query all workgroups within this account
+                // and region
+                Policy.Builder.create(scope, "GetAthenaQueryStatusPolicy")
+                        .statements(Lists.newArrayList(PolicyStatement.Builder.create()
+                                .resources(Lists.newArrayList("arn:aws:athena:" + instanceProperties.get(REGION) + ":"
+                                        + instanceProperties.get(ACCOUNT) + ":workgroup/*"))
+                                .actions(Lists.newArrayList("athena:getQueryExecution"))
+                                .build()))
+                        .build());
+    }
+
+    private static IKey createSpillMasterKey(Construct scope, InstanceProperties instanceProperties) {
+        String spillKeyArn = instanceProperties.get(ATHENA_SPILL_MASTER_KEY_ARN);
+        if (spillKeyArn == null) {
+            return Key.Builder.create(scope, "SpillMasterKey")
+                    .description("Key used to encrypt data in the Athena spill bucket for Sleeper.")
+                    .enableKeyRotation(true)
+                    .removalPolicy(RemovalPolicy.DESTROY)
+                    .pendingWindow(Duration.days(7))
+                    .build();
+        } else {
+            return Key.fromKeyArn(scope, "SpillMasterKey", spillKeyArn);
+        }
+    }
+
+    private static String getSimpleClassName(String className) {
+        String simpleClassName = className.substring(className.lastIndexOf(".") + 1);
+        if (simpleClassName.endsWith("CompositeHandler")) {
+            return simpleClassName.substring(0, simpleClassName.indexOf("CompositeHandler"));
+        }
+        return simpleClassName;
     }
 }
