@@ -1,5 +1,5 @@
 /*
- * Copyright 2022 Crown Copyright
+ * Copyright 2022-2024 Crown Copyright
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,120 +15,89 @@
  */
 package sleeper.cdk.stack.bulkimport;
 
-import static sleeper.configuration.properties.SystemDefinedInstanceProperty.BULK_IMPORT_EMR_JOB_QUEUE_URL;
+import com.google.common.collect.Lists;
+import software.amazon.awscdk.NestedStack;
+import software.amazon.awscdk.services.cloudwatch.IMetric;
+import software.amazon.awscdk.services.iam.Effect;
+import software.amazon.awscdk.services.iam.PolicyStatement;
+import software.amazon.awscdk.services.lambda.IFunction;
+import software.amazon.awscdk.services.sns.Topic;
+import software.amazon.awscdk.services.sqs.Queue;
+import software.constructs.Construct;
+
+import sleeper.cdk.jars.BuiltJars;
+import sleeper.cdk.stack.core.CoreStacks;
+import sleeper.cdk.stack.core.LoggingStack.LogGroupRef;
+import sleeper.cdk.util.Utils;
+import sleeper.core.properties.instance.InstanceProperties;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Lists;
-
-import sleeper.cdk.Utils;
-import sleeper.cdk.stack.StateStoreStack;
-import sleeper.configuration.properties.InstanceProperties;
-import sleeper.configuration.properties.SystemDefinedInstanceProperty;
-import sleeper.configuration.properties.UserDefinedInstanceProperty;
-import software.amazon.awscdk.Duration;
-import software.amazon.awscdk.services.iam.Effect;
-import software.amazon.awscdk.services.iam.PolicyStatement;
-import software.amazon.awscdk.services.lambda.Code;
-import software.amazon.awscdk.services.lambda.Function;
-import software.amazon.awscdk.services.lambda.S3Code;
-import software.amazon.awscdk.services.lambda.eventsources.SqsEventSource;
-import software.amazon.awscdk.services.s3.Bucket;
-import software.amazon.awscdk.services.s3.IBucket;
-import software.amazon.awscdk.services.sns.ITopic;
-import software.amazon.awscdk.services.sqs.Queue;
-import software.constructs.Construct;
+import static sleeper.core.properties.instance.CdkDefinedInstanceProperty.BULK_IMPORT_EMR_JOB_QUEUE_ARN;
+import static sleeper.core.properties.instance.CdkDefinedInstanceProperty.BULK_IMPORT_EMR_JOB_QUEUE_URL;
 
 /**
- * An {@link EmrBulkImportStack} creates an SQS queue that bulk import jobs can
- * be sent to. A message arriving on this queue triggers a lambda. That lambda
- * creates an EMR cluster that executes the bulk import job and then terminates.
+ * Deploys resources to perform bulk import jobs on EMR, with a cluster created per job. A message arriving on a queue
+ * triggers a lambda. That lambda creates an EMR cluster that executes the bulk import job and then terminates.
  */
-public class EmrBulkImportStack extends AbstractEmrBulkImportStack {
-    protected Function bulkImportJobStarter;
+public class EmrBulkImportStack extends NestedStack {
+    private final Queue bulkImportJobQueue;
 
-    public EmrBulkImportStack(Construct scope,
+    public EmrBulkImportStack(
+            Construct scope,
             String id,
-            List<IBucket> dataBuckets,
-            List<StateStoreStack> stateStoreStacks,
             InstanceProperties instanceProperties,
-            ITopic errorsTopic) {
-        super(scope, id, "NonPersistentEMR", "NonPersistentEMR",
-                BULK_IMPORT_EMR_JOB_QUEUE_URL, dataBuckets, stateStoreStacks, instanceProperties, errorsTopic);
-        
-        // Create function to pull messages off queue and start jobs
-        createBulkImportJobStarterFunction(shortId, bulkImportPlatform, bulkImportJobQueue);
+            BuiltJars jars,
+            Topic errorsTopic,
+            BulkImportBucketStack importBucketStack,
+            CommonEmrBulkImportStack commonEmrStack,
+            CoreStacks coreStacks,
+            List<IMetric> errorMetrics) {
+        super(scope, id);
+
+        CommonEmrBulkImportHelper commonHelper = new CommonEmrBulkImportHelper(
+                this, "NonPersistentEMR", instanceProperties, coreStacks, errorMetrics);
+        bulkImportJobQueue = commonHelper.createJobQueue(
+                BULK_IMPORT_EMR_JOB_QUEUE_URL, BULK_IMPORT_EMR_JOB_QUEUE_ARN,
+                errorsTopic);
+        IFunction jobStarter = commonHelper.createJobStarterFunction(
+                "NonPersistentEMR", bulkImportJobQueue, jars, importBucketStack.getImportBucket(),
+                LogGroupRef.BULK_IMPORT_EMR_NON_PERSISTENT_START, commonEmrStack);
+
+        configureJobStarterFunction(instanceProperties, jobStarter);
+        Utils.addStackTagIfSet(this, instanceProperties);
     }
-    
-    private void createBulkImportJobStarterFunction(String shortId, String bulkImportPlatform, Queue jobQueue) {
-        Map<String, String> env = Utils.createDefaultEnvironment(instanceProperties);
-        env.put("BULK_IMPORT_PLATFORM", bulkImportPlatform);
-        S3Code code = Code.fromBucket(Bucket.fromBucketName(this, "CodeBucketEMR", instanceProperties.get(UserDefinedInstanceProperty.JARS_BUCKET)),
-                "bulk-import-starter-" + instanceProperties.get(UserDefinedInstanceProperty.VERSION) + ".jar");
 
-        IBucket configBucket = Bucket.fromBucketName(this, "ConfigBucket", instanceProperties.get(SystemDefinedInstanceProperty.CONFIG_BUCKET));
-
-        String functionName = Utils.truncateTo64Characters(String.join("-", "sleeper",
-                instanceId.toLowerCase(), shortId, "-bulk-import-job-starter"));
-
-        bulkImportJobStarter = Function.Builder.create(this, "BulkImport" + shortId + "JobStarter")
-                .code(code)
-                .functionName(functionName)
-                .description("Function to start " + shortId + " bulk import jobs")
-                .memorySize(1024)
-                .timeout(Duration.seconds(10))
-                .environment(env)
-                .runtime(software.amazon.awscdk.services.lambda.Runtime.JAVA_8)
-                .handler("sleeper.bulkimport.starter.BulkImportStarter")
-                .logRetention(Utils.getRetentionDays(instanceProperties.getInt(UserDefinedInstanceProperty.LOG_RETENTION_IN_DAYS)))
-                .events(Lists.newArrayList(new SqsEventSource(jobQueue)))
-                .build();
-
-        configBucket.grantRead(bulkImportJobStarter);
-        if (importBucket != null) {
-            importBucket.grantRead(bulkImportJobStarter);
-        }
-        if (ingestBucket != null) {
-            ingestBucket.grantRead(bulkImportJobStarter);
-        }
-        
+    private static void configureJobStarterFunction(
+            InstanceProperties instanceProperties, IFunction bulkImportJobStarter) {
         Map<String, Map<String, String>> conditions = new HashMap<>();
         Map<String, String> tagKeyCondition = new HashMap<>();
-
-        instanceProperties.getTags().entrySet().stream().forEach(entry -> {
-            tagKeyCondition.put("elasticmapreduce:RequestTag/" + entry.getKey(), entry.getValue());
-        });
+        instanceProperties.getTags().forEach((key, value) -> tagKeyCondition.put("elasticmapreduce:RequestTag/" + key, value));
 
         conditions.put("StringEquals", tagKeyCondition);
 
         bulkImportJobStarter.addToRolePolicy(PolicyStatement.Builder.create()
-                .actions(Lists.newArrayList("elasticmapreduce:RunJobFlow"))
+                .actions(Lists.newArrayList(
+                        "elasticmapreduce:RunJobFlow",
+                        "elasticmapreduce:AddTags"))
                 .effect(Effect.ALLOW)
                 .resources(Lists.newArrayList("*"))
                 .conditions(conditions)
-                .build());
-
-        String arnPrefix = "arn:aws:iam::" + instanceProperties.get(UserDefinedInstanceProperty.ACCOUNT) + ":role/";
-
-        bulkImportJobStarter.addToRolePolicy(PolicyStatement.Builder.create()
-                .effect(Effect.ALLOW)
-                .actions(Lists.newArrayList("iam:PassRole"))
-                .resources(Lists.newArrayList(
-                        arnPrefix + instanceProperties.get(SystemDefinedInstanceProperty.BULK_IMPORT_EMR_CLUSTER_ROLE_NAME),
-                        arnPrefix + instanceProperties.get(SystemDefinedInstanceProperty.BULK_IMPORT_EMR_EC2_ROLE_NAME)
-                ))
                 .build());
 
         bulkImportJobStarter.addToRolePolicy(PolicyStatement.Builder.create()
                 .sid("CreateCleanupRole")
                 .actions(Lists.newArrayList("iam:CreateServiceLinkedRole", "iam:PutRolePolicy"))
                 .resources(Lists.newArrayList("arn:aws:iam::*:role/aws-service-role/elasticmapreduce.amazonaws.com*/AWSServiceRoleForEMRCleanup*"))
-                .conditions(ImmutableMap.of("StringLike", ImmutableMap.of("iam:AWSServiceName",
+                .conditions(Map.of("StringLike", Map.of("iam:AWSServiceName",
                         Lists.newArrayList("elasticmapreduce.amazonaws.com",
                                 "elasticmapreduce.amazonaws.com.cn"))))
                 .build());
+    }
+
+    public Queue getBulkImportJobQueue() {
+        return bulkImportJobQueue;
     }
 }
